src/main/java/com/example/gymcot/error/NotAllowedUserException.java
package com.example.gymcot.error;

public class NotAllowedUserException extends RuntimeException {
}
